--- a/index.html
+++ b/index.html
@@ -64,24 +64,23 @@
 
     <!-- T-SHIRT COVER -->
 
-    <div class="container t-shirt">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-10">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h3>Shop at</h3>
-                        <h1>emporium.</h1>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
-                            spring which I enjoy with my.</p>
-                        <button class="button-pill button-danger">SALE ITEMS</button>
-                    </div>
-                    <div class="col-md-6"><img src="./public/images/products/product-tshitr-white-700x500.jpg" alt=""></div>
+    <div class="t-shirt pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 p-0">
+                    <h3 class="pb-0">Shop at</h3>
+                    <h1 class="pt-0 pb-2">emporium.</h1>
+                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                        spring which I enjoy with my.</p>
+                    <span class="badge badge-pill badge-danger mt-4 px-5 py-3">SALE ITEMS</span>
+                </div>
+                <div class="col-md-6 p-0">
+                    <img class="img-fluid pl-5" src="./public/images/slider-1.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2"></div>
         </div>
     </div>
+    
     <!-- SCRIPTS -->
     <script src="./src/js/index.js"></script>
     <script src="/node_modules/jquery/dist/jquery.js"></script>
