--- a/index.html
+++ b/index.html
@@ -80,7 +80,30 @@
             </div>
         </div>
     </div>
-    
+
+    <!-- SERVICES -->
+    <div class="container">
+        <div class="services">
+            <div class="row py-4">
+                <div class="col-md-4">
+                    <div class="text-center room">
+                        <a><h1>Living Room</h1></a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center items">
+                        <a><h1>Sale Items</h1></a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center clothes">
+                        <a><h1>Clothes</h1></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- SCRIPTS -->
     <script src="./src/js/index.js"></script>
     <script src="/node_modules/jquery/dist/jquery.js"></script>
