--- a/index.html
+++ b/index.html
@@ -84,24 +84,112 @@
     <!-- SERVICES -->
     <div class="container">
         <div class="services">
-            <div class="row py-4">
+            <div class="row pt-4 pb-5">
                 <div class="col-md-4">
                     <div class="text-center room">
-                        <a><h1>Living Room</h1></a>
+                        <a>
+                            <h1>Living Room</h1>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="text-center items">
-                        <a><h1>Sale Items</h1></a>
+                        <a>
+                            <h1>Sale Items</h1>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="text-center clothes">
-                        <a><h1>Clothes</h1></a>
+                        <a>
+                            <h1>Clothes</h1>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- PRODUCTS -->
+    <div class="container products pb-5 mb-5">
+        <h2 class="text-center py-5 m-0">Recent Products</h3>
+            <div class="row pt-5">
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-luxry-sofa.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Luxury Sofa</h3><a>
+                            <span>$600.00</span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-gloves.jpg" alt="">
+                    <div class="justify-content-center d-flex pt-4 pb-5">
+                            <span class="onsale">Sale!</span>
+                            <div>
+                                <h3><a>Leather Gloves</a></h3>
+                                <span class="pr-2">$34.00</span>
+                                <span>$27.00</span>
+                            </div>
+                        </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-cups.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Colorful Bowl</h3></a>
+                        <span>$18.00</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-bag.jpg" alt="">
+                    <div class="justify-content-center d-flex pt-4 pb-5">
+                        <span class="onsale">Sale!</span>
+                        <div>
+                            <h3><a>Women Bag</a></h3>
+                            <span class="pr-2">$420.00</span>
+                            <span>$350.00</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-tshitr.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Minimal T-Shirt</h3></a>
+                        <span>$15.00</span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-plates.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Plates Set</h3></a>
+                        <span>$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-modern-sofa.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Modern Sofa</h3></a>
+                        <span>$900.00</span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-bed.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Bed Linen</a></h3>
+                        <span>$79.00</span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid pb-3" src="./public/images/products_mini/product-shoes.jpg" alt="">
+                    <div class="text-center pt-4 pb-5">
+                        <h3><a>Minimal Shoes</h3></a>
+                        <span>$60.00</span>
+                    </div>
+                </div>
+            </div>
     </div>
 
     <!-- SCRIPTS -->
