--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 <div class="col-md-4">
                     <img class="img-fluid pb-3" src="./public/images/products_mini/product-gloves.jpg" alt="">
                     <div class="justify-content-center d-flex pt-4 pb-5">
-                            <span class="onsale">Sale!</span>
-                            <div>
-                                <h3><a>Leather Gloves</a></h3>
-                                <span class="pr-2">$34.00</span>
-                                <span>$27.00</span>
-                            </div>
+                        <span class="onsale">Sale!</span>
+                        <div>
+                            <h3><a>Leather Gloves</a></h3>
+                            <span class="pr-2">$34.00</span>
+                            <span>$27.00</span>
                         </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <img class="img-fluid pb-3" src="./public/images/products_mini/product-cups.jpg" alt="">
@@ -191,6 +191,16 @@
                 </div>
             </div>
     </div>
+
+    <!-- DISCOVER PRODUCTS -->
+    <section id="learn" class="text-center text-white">
+            <div class="container">
+                <h2>Discover Thousends Of Great Products</h2>
+                <span class="badge badge-pill badge-danger mt-4 px-5 py-3">SALE ITEMS</span>
+            </div>
+        </section>
+
+    
 
     <!-- SCRIPTS -->
     <script src="./src/js/index.js"></script>
