--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <h2 class="text-center py-5 m-0">Recent Products</h3>
             <div class="row blog">
                 <div class="col-md-12">
-                    <div id="blogCarousel" class="carousel slide" data-ride="carousel" role="listbox">
+                    <div id="blogCarousel" class="carousel slide mb-5" data-ride="carousel" role="listbox">
 
                         <ol class="carousel-indicators mb-3">
                             <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
@@ -428,6 +428,42 @@
 
                 </div>
             </div>
+    </section>
+
+    <!-- CARDS -->
+    <section class="container mt-5" id="cards">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card py-5 px-5 border-0 rounded-0">
+                    <div class="card-body text-center">
+                        <i class="fas fa-2x fa-check-circle pb-5"></i>
+                        <h5 class="card-title pb-4">TRUSTED BY 10,000+ CUSTOMERS</h5>
+                        <p class="card-text pb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <a href="#" class="card-link"><span class="badge badge-dark py-3 px-4">LEARN MORE</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card py-5 px-5 border-0 red rounded-0 text-white">
+                    <div class="card-body text-center">
+                        <i class="fas fa-2x fa-paper-plane pb-5"></i>
+                        <h5 class="card-title pb-4">VERY FAST SHIPPING</h5>
+                        <p class="card-text pb-4 text-white">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <a href="#" class="card-link"><span class="badge badge-light py-3 px-4">LEARN MORE</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card py-5 px-5 border-0 rounded-0">
+                    <div class="card-body text-center">
+                        <i class="fas fa-2x fa-check-circle pb-5"></i>
+                        <h5 class="card-title pb-4">TRUSTED BY 10,000+ CUSTOMERS</h5>
+                        <p class="card-text pb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <a href="#" class="card-link"><span class="badge badge-dark py-3 px-4">LEARN MORE</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- SCRIPTS -->
