--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </section>
     <!-- NAVBAR -->
-    <section id="navbar" class="white">
+    <section id="navbar" class="shadow-sm white">
         <div class="container">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-light col-md-12 py-4">
